--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="head" style="margin-top: 10px;">
                 <img style="background-image: url(AdobeStock_1150690002_Preview.jpeg);" src="FullLogo_Transparent_NoBuffer.png" alt="" class="im1">
-                <pre class="pr1">     <BUtton class="b3"><a href="#APROPOS" class="a1">A-PROPOS</a></BUtton>    <button class="b4"><a href="#prod" class="a1">NOS-PRODUITS</a></button>     <button class="b5" id="mk"><a href="contact.php" class="a1">CONTACT</a></button>   <button class="b5"><a href="#PAYEMENT" class="a1">$</a></button>   </pre>
+                <pre class="pr1">     <BUtton class="b3"><a href="#APROPOS" class="a1">A-PROPOS</a></BUtton>    <button class="b4"><a href="#prod" class="a1">NOS-PRODUITS</a></button>     <button class="b5" id="mk"><a href="livraison.html" class="a1">CONTACT</a></button>   <button class="b5"><a href="#PAYEMENT" class="a1">$</a></button>   </pre>
             </div>
         </header>
         <div class="s2">
